crates/ruff_linter/src/rules/flake8_implicit_str_concat/snapshots/ruff_linter__rules__flake8_implicit_str_concat__tests__ISC002_ISC_syntax_error.py.snap
---
source: crates/ruff_linter/src/rules/flake8_implicit_str_concat/mod.rs
---
invalid-syntax: missing closing quote in string literal
 --> ISC_syntax_error.py:2:5
  |
1 | # The lexer emits a string token if it's unterminated
2 | "a" "b
  |     ^^
3 | "a" "b" "c
4 | "a" """b

invalid-syntax: missing closing quote in string literal
 --> ISC_syntax_error.py:3:9
  |
1 | # The lexer emits a string token if it's unterminated
2 | "a" "b
3 | "a" "b" "c
  |         ^^
4 | "a" """b
5 | c""" "d

invalid-syntax: missing closing quote in string literal
 --> ISC_syntax_error.py:5:6
  |
3 | "a" "b" "c
4 | "a" """b
5 | c""" "d
  |      ^^
6 |
7 | # This is also true for

invalid-syntax: f-string: unterminated string
  --> ISC_syntax_error.py:9:8
 7 | # This is also true for
 8 | # unterminated f-strings.
 9 | f"a" f"b
   |        ^
10 | f"a" f"b" f"c
11 | f"a" f"""b

invalid-syntax: Expected FStringEnd, found newline
  --> ISC_syntax_error.py:9:9
   |
 7 | # This is also true for
 8 | # unterminated f-strings.
 9 | f"a" f"b
   |         ^
10 | f"a" f"b" f"c
11 | f"a" f"""b

invalid-syntax: f-string: unterminated string
  --> ISC_syntax_error.py:10:13
 8 | # unterminated f-strings.
 9 | f"a" f"b
10 | f"a" f"b" f"c
   |             ^
11 | f"a" f"""b
12 | c""" f"d {e

invalid-syntax: Expected FStringEnd, found newline
  --> ISC_syntax_error.py:10:14
 8 | # unterminated f-strings.
 9 | f"a" f"b
10 | f"a" f"b" f"c
   |              ^
11 | f"a" f"""b
12 | c""" f"d {e

invalid-syntax: missing closing quote in string literal
  --> ISC_syntax_error.py:16:5
   |
14 | (
15 |     "a"
16 |     "b
   |     ^^
17 |     "c"
18 |     "d"

invalid-syntax: f-string: unterminated triple-quoted string
  --> ISC_syntax_error.py:26:9
   |
24 |   (
25 |       """abc"""
26 |       f"""def
   |  _________^
27 | |     "g" "h"
28 | |     "i" "j"
29 | | )
   | |__^

invalid-syntax: f-string: unterminated string
  --> ISC_syntax_error.py:30:1
   |
28 |     "i" "j"
29 | )
   |  ^
