crates/ruff_linter/src/rules/flake8_implicit_str_concat/snapshots/ruff_linter__rules__flake8_implicit_str_concat__tests__ISC002_ISC_syntax_error_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_implicit_str_concat/mod.rs
---
invalid-syntax: missing closing quote in string literal
 --> ISC_syntax_error_2.py:2:4
  |
1 | # Regression test for https://github.com/astral-sh/ruff/issues/21023
2 | '' '
  |    ^
3 | "" ""
4 | '' '' '

invalid-syntax: missing closing quote in string literal
 --> ISC_syntax_error_2.py:4:7
  |
2 | '' '
3 | "" ""
4 | '' '' '
  |       ^
5 | "" "" "
6 | f"" f"

invalid-syntax: missing closing quote in string literal
 --> ISC_syntax_error_2.py:5:7
  |
3 | "" ""
4 | '' '' '
5 | "" "" "
  |       ^
6 | f"" f"
7 | f"" f"" f"

invalid-syntax: f-string: unterminated string
 --> ISC_syntax_error_2.py:6:7
4 | '' '' '
5 | "" "" "
6 | f"" f"
  |       ^
7 | f"" f"" f"

invalid-syntax: f-string: unterminated string
 --> ISC_syntax_error_2.py:7:11
  |
5 | "" "" "
6 | f"" f"
7 | f"" f"" f"
  |           ^
