crates/ruff_linter/src/rules/flake8_implicit_str_concat/snapshots/ruff_linter__rules__flake8_implicit_str_concat__tests__multiline_ISC002_ISC.py.snap
---
source: crates/ruff_linter/src/rules/flake8_implicit_str_concat/mod.rs
---
ISC002 Implicitly concatenated string literals over multiple lines
 --> ISC.py:5:5
  |
3 |   _ = "abc" + "def"
4 |
5 |   _ = "abc" \
  |  _____^
6 | |     "def"
  | |_________^
7 |
8 |   _ = (

ISC002 Implicitly concatenated string literals over multiple lines
  --> ISC.py:24:3
   |
23 |   _ = (
24 | /   "abc"
25 | |   "def"
   | |_______^
26 |   )

ISC002 Implicitly concatenated string literals over multiple lines
  --> ISC.py:29:3
   |
28 |   _ = (
29 | /   f"abc"
30 | |   "def"
   | |_______^
31 |   )

ISC002 Implicitly concatenated string literals over multiple lines
  --> ISC.py:34:3
   |
33 |   _ = (
34 | /   b"abc"
35 | |   b"def"
   | |________^
36 |   )

ISC002 Implicitly concatenated string literals over multiple lines
  --> ISC.py:67:5
   |
65 |   _ = f"""abc {"def" "ghi"} jkl"""
66 |   _ = f"""abc {
67 | /     "def"
68 | |     "ghi"
   | |_________^
69 |   } jkl"""

ISC002 Implicitly concatenated string literals over multiple lines
  --> ISC.py:74:10
   |
72 |   _ = "a" f"b {f"c" f"d"} e" "f"
73 |   _ = f"b {f"c" f"d {f"e" f"f"} g"} h"
74 |   _ = f"b {f"abc" \
   |  __________^
75 | |     f"def"} g"
   | |__________^
76 |
77 |   # Explicitly concatenated nested f-strings

ISC002 Implicitly concatenated string literals over multiple lines
   --> ISC.py:196:1
195 |   # ISC002
196 | / t"The quick brown fox jumps over the lazy "\
197 | | t"dog."
    | |_______^
198 |
199 |   # ISC003

ISC002 Implicitly concatenated string literals over multiple lines
   --> ISC.py:208:10
    |
206 |   _ = "a" f"b {t"c" t"d"} e" "f"
207 |   _ = t"b {f"c" f"d {t"e" t"f"} g"} h"
208 |   _ = f"b {t"abc" \
    |  __________^
209 | |     t"def"} g"
    | |__________^

ISC002 Implicitly concatenated string literals over multiple lines
   --> ISC.py:217:5
    |
215 |   # See https://github.com/astral-sh/ruff/issues/19757
216 |   _ = "abc" + (
217 | /     "def"
218 | |     "ghi"
    | |_________^
219 |   )

ISC002 Implicitly concatenated string literals over multiple lines
   --> ISC.py:222:5
    |
221 |   _ = (
222 | /     "abc"
223 | |     "def"
    | |_________^
224 |   ) + "ghi"
